--- a/layouts/productos/accesorios/index.html
+++ b/layouts/productos/accesorios/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- DESCRIPCION DEL SITIO WEB -->
-    <meta name="descrption"
+    <meta name="description"
         content="Compostura de calzado en Villa Ballester. Plantillas ortopedicas, articulos regionales, mates, termos y más" />
     <!-- PALABRAS CLAVE PARA BUSCADORES -->
     <meta name="keywords"
@@ -234,9 +234,7 @@
                                 </a>
                                 <div class="collapse" id="collapseExample7">
                                     <div class="card card-body">
-                                        Some placeholder content for the collapse component. This panel is hidden by
-                                        default
-                                        but revealed when the user activates the relevant trigger.
+                                        Quitamanchas instantáneo en aerosol Rex. No deja aureola.
                                     </div>
                                 </div>
                             </p>
@@ -256,9 +254,7 @@
                                 </a>
                                 <div class="collapse" id="collapseExample8">
                                     <div class="card card-body">
-                                        Some placeholder content for the collapse component. This panel is hidden by
-                                        default
-                                        but revealed when the user activates the relevant trigger.
+                                        Variedad en cordones! Todos los colores, largos, y tipo.
                                     </div>
                                 </div>
                             </p>
@@ -278,9 +274,7 @@
                                 </a>
                                 <div class="collapse" id="collapseExample9">
                                     <div class="card card-body">
-                                        Some placeholder content for the collapse component. This panel is hidden by
-                                        default
-                                        but revealed when the user activates the relevant trigger.
+                                        Plantillas deportivas para tus zapatillas.
                                     </div>
                                 </div>
                             </p>
@@ -300,9 +294,7 @@
                                 </a>
                                 <div class="collapse" id="collapseExample10">
                                     <div class="card card-body">
-                                        Some placeholder content for the collapse component. This panel is hidden by
-                                        default
-                                        but revealed when the user activates the relevant trigger.
+                                        Plantillas de cuero y media plantilla. No sufras al usar tu calzado preferido.
                                     </div>
                                 </div>
                             </p>
@@ -322,9 +314,7 @@
                                 </a>
                                 <div class="collapse" id="collapseExample11">
                                     <div class="card card-body">
-                                        Some placeholder content for the collapse component. This panel is hidden by
-                                        default
-                                        but revealed when the user activates the relevant trigger.
+                                        Renovador para gamuza y nobuck en aerosol marca Wassington.
                                     </div>
                                 </div>
                             </p>
@@ -344,9 +334,8 @@
                                 </a>
                                 <div class="collapse" id="collapseExample12">
                                     <div class="card card-body">
-                                        Some placeholder content for the collapse component. This panel is hidden by
-                                        default
-                                        but revealed when the user activates the relevant trigger.
+                                        Revitalizador de cuero engrasado en aerosol marca Wassington. Apto para todos
+                                        los colores.
                                     </div>
                                 </div>
                             </p>
