--- a/layouts/servicios/index.html
+++ b/layouts/servicios/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- DESCRIPCION DEL SITIO WEB -->
-  <meta name="descrption"
+  <meta name="description"
     content="Compostura de calzado en Villa Ballester. Plantillas ortopedicas, articulos regionales, mates, termos y más" />
   <!-- PALABRAS CLAVE PARA BUSCADORES -->
   <meta name="keywords"
