--- a/css/style.css
+++ b/css/style.css
@@ -79,11 +79,6 @@ header {
   border-radius: 5px;
 }
 
-/* .social-icons {
-    display: flex;
-    padding-bottom: 0.1rem;
-    justify-content: flex-end;
-} */
 footer {
   margin-top: 3.5rem;
 }
@@ -112,7 +107,9 @@ footer {
   padding-top: 0.5rem;
 }
 
-.form__contact label, .form__contact input, .form__contact textarea {
+.form__contact label,
+.form__contact input,
+.form__contact textarea {
   display: inline;
   width: 100%;
 }
@@ -121,7 +118,8 @@ footer {
   font-weight: bold;
 }
 
-.form__contact input:not([type=submit]), .form__contact textarea {
+.form__contact input:not([type=submit]),
+.form__contact textarea {
   border: none;
   border-bottom: 2px solid #8c140b;
   margin-bottom: 10px;
@@ -240,7 +238,9 @@ input[type=submit] {
   border-bottom-left-radius: 10px;
   transition: all 1s;
 }
-.btn__accesorios:after, .btn__accesorios:before {
+
+.btn__accesorios:after,
+.btn__accesorios:before {
   content: " ";
   width: 10px;
   height: 10px;
@@ -248,23 +248,28 @@ input[type=submit] {
   border: 0px solid #fff;
   transition: all 1s;
 }
+
 .btn__accesorios:after {
   top: -1px;
   left: -1px;
   border-top: 5px solid #dfc8a5;
   border-left: 5px solid #8c140b;
 }
+
 .btn__accesorios:before {
   bottom: -1px;
   right: -1px;
   border-bottom: 5px solid #8c140b;
   border-right: 5px solid #dfc8a5;
 }
+
 .btn__accesorios:hover {
   border-top-right-radius: 0px;
   border-bottom-left-radius: 0px;
 }
-.btn__accesorios:hover:before, .btn__accesorios:hover:after {
+
+.btn__accesorios:hover:before,
+.btn__accesorios:hover:after {
   width: 100%;
   height: 100%;
 }
