--- a/layouts/productos/calzado/index.html
+++ b/layouts/productos/calzado/index.html
@@ -99,7 +99,7 @@
 
         <div class="container">
             <div class="row text-center">
-                <div class="-12 col-sm-12 col-md-12col-lg-12 mt-2 mb-2 m-auto">
+                <div class="col-12 col-sm-12 col-md-12col-lg-12 mt-2 mb-2 m-auto">
                     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
